--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4 col-md-offset-4">
-          <H1>Hello World</H1>
+          <H1>Hello World II</H1>
         </div>
       </div>
     </div>
