--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="fr">
   <head>
     <meta charset="utf-8">
@@ -62,8 +62,52 @@
         <h1>DÉGUSTEZ UNE GLACE</h1>
         <h2>MAINTENANT TOUT DE SUITE</h2>
         <p>
-          <a href="#" class="btn btn-primary btn-lg">Je veux une glace</a>
+          <!--<a href="#" class="btn btn-primary btn-lg">Je veux une glace</a> -->
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#orderform">
+            Je veux une glace
+          </button>
         </p>
+      </div>
+    </div>
+
+    <div class="modal fade" id="orderform" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div id="wufoo-z64knsb101v0gc">
+            Fill out my <a href="https://tibp.wufoo.com/forms/z64knsb101v0gc">online form</a>.
+            </div>
+            <div id="wuf-adv" style="font-family:inherit;font-size: small;color:#a7a7a7;text-align:center;display:block;">Use <a href="http://www.wufoo.com/gallery/templates/">Wufoo templates</a> to make your own HTML forms.
+            </div>
+            <script type="text/javascript">var z64knsb101v0gc;(function(d, t) {
+            var s = d.createElement(t), options = {
+            'userName':'tibp',
+            'formHash':'z64knsb101v0gc',
+            'autoResize':true,
+            'height':'465',
+            'async':true,
+            'host':'wufoo.com',
+            'header':'show',
+            'ssl':true};
+            s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
+            s.onload = s.onreadystatechange = function() {
+            var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
+            try { z64knsb101v0gc = new WufooForm();z64knsb101v0gc.initialize(options);z64knsb101v0gc.display(); } catch (e) {}};
+            var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
+            })(document, 'script');</script>
+
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
       </div>
     </div>
 
